# tonic-demo

./: .editorconfig  .gitignore  Cargo.toml  README.md  build.rs
proto/: fetch.proto
src/: main.rs
