[package]
name = "tonic-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
tonic = "0.6.2"
prost = "0.9.0"
async-trait = "0.1.53"
anyhow = "1.0.55"

[build-dependencies]
tonic-build = "0.6.2"
