[package]
name = "tonic-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.8"
prost = "0.11"
prost-types = "0.11"
async-trait = "0.1"
anyhow = "1.0"

[build-dependencies]
tonic-build = "0.8"
